# AWS-IR

./: .gitignore  README.md  pyproject.toml
script/: eval_xgb.py  fist_script.py  save_ml.py  train_xgb.py
src/: aws_loading.py  aws_remapping.py  combine.py  cpcir_loading.py
src/aws_ir/: aws_loading.py  aws_remapping.py  combine.py  cpcir_loading.py  ml_loading.py  utils.py
