[project]
authors = [{name = "Anqi Li", email = "li.a.titech@gmail.com"}]
dependencies = []
name = "AWS-IR"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
aws_ir = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
xarray = ">=2025.4.0,<2026"
xgboost = ">=3.0.0,<4"
ipykernel = ">=6.29.5,<7"
pandas = ">=2.2.3,<3"
scipy = ">=1.15.2,<2"
matplotlib = ">=3.10.3,<4"
dask = ">=2025.5.0,<2026"
parse = ">=1.20.2,<2"
tqdm = ">=4.67.1,<5"

[tool.hatch.build.targets.wheel]
packegs = ["src/aws_ir"]
